# SWE-AF

./: .gitignore  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  manifest  pyproject.toml  requirements-docker.txt  requirements.txt
.beads/: config.yaml  issues.jsonl  metadata.json
.cw9/: crawl.db.pre-crawl  dag.json  extract_usage.jsonl
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  functions.baml  generators.baml
docs/: ARCHITECTURE.md  BUILD_RUNBOOK.md  SPAWN_RUNBOOK.md
swe_af/: app.py  baml_bridge.py
tests/: conftest.py  test_acceptance_check_schema.py  test_architecture_planning_loop_reasoner.py  test_baml_bridge.py  test_baml_checks_spike.py  test_baml_codegen.py  test_baml_output_format.py  test_baml_parse.py  test_baml_seam_integration.py  test_build_budget_finalize.py  test_build_terminal_status.py  test_check_discovery.py  test_checkpoint_guard.py  test_checkpoint_namespacing.py  test_codex_harness_patch.py  test_coding_loop.py  test_coding_loop_deterministic_gate.py  test_conftest_malformed_planner_execute_nodeids_integration.py  test_dag_executor_fatal_abort.py  test_dag_executor_multi_repo.py  test_execution_agents_runtime.py  test_fatal_error.py  test_fix_generator_history.py  test_git_init_guard.py  test_local_check.py  test_mock_fixture_cross_feature_integration.py  test_model_config.py  test_planned_issue_verification.py  test_planner_pipeline.py  test_planning_artifact_prompts.py  test_planning_artifact_validator.py  test_planning_artifacts_docs.py  test_planning_artifacts_schema.py  test_planning_loop_observability.py  test_prompt_utils.py  test_runtime_provider_routing.py  (+5 more)
(+173 files in other folders)
