[project]
name = "swe-af"
version = "0.1.0"
description = "Autonomous SWE agent node for AgentField"
requires-python = ">=3.12"
dependencies = [
    "agentfield>=0.1.82",
    "pydantic>=2.0",
    # Compatibility pin: newer SDK builds have surfaced
    # "Unknown message type: rate_limit_event" during streaming.
    "claude-agent-sdk==0.1.20",
    # HITL plan-approval gate (auto-enabled when HAX_API_KEY is set).
    "hax-sdk>=0.2.4",
    "python-dotenv>=1.0",
    # Parser-only (Schema-Aligned Parser).
    "baml-py",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: deterministic, no network",
    "functional: component-level behavior",
    "integration: real-LLM, key-gated (skipped without credentials)",
]

[project.scripts]
swe-af = "swe_af.app:main"
swe-fast = "swe_af.fast.app:main"

[tool.setuptools.packages.find]
include = ["swe_af*"]
